--- a/src/components/NoPermission.css
+++ b/src/components/NoPermission.css
@@ -267,88 +267,6 @@
   flex-shrink: 0;
   display: none;
 }
-.no-permission-to {
-  margin: 0;
-  width: 273px;
-  position: relative;
-  font-size: inherit;
-  line-height: 29px;
-  font-weight: 700;
-  font-family: inherit;
-  display: flex;
-  align-items: center;
-  flex-shrink: 0;
-}
-.no-permission-to-access-wrapper {
-  width: 224px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: 0;
-  box-sizing: border-box;
-}
-.sorry-you-do {
-  margin: 0;
-}
-.sorry-you-do-container {
-  position: relative;
-  line-height: 22px;
-}
-.permission-content,
-.sorry-you-do-not-have-suffici-wrapper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.sorry-you-do-not-have-suffici-wrapper {
-  flex-direction: row;
-  font-size: var(--font-size-smi);
-  font-family: var(--regular-14px-22);
-}
-.permission-content {
-  flex-direction: column;
-  gap: var(--gap-4xs);
-}
-.get-report {
-  position: relative;
-  font-size: var(--regular-14px-22-size);
-  line-height: 25px;
-  display: inline-block;
-  font-family: var(--body-bold-small);
-  color: var(--blue-sky-sky-6);
-  text-align: center;
-  min-width: 68px;
-}
-.no-permission,
-.permission-container,
-.report-button {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.report-button {
-  cursor: pointer;
-  border: 1px solid var(--blue-sky-sky-6);
-  padding: var(--padding-9xs) var(--padding-sm);
-  background-color: transparent;
-  width: 98px;
-  border-radius: var(--br-9xs);
-  box-sizing: border-box;
-  flex-direction: row;
-  white-space: nowrap;
-}
-.report-button:hover {
-  background-color: var(--color-royalblue-200);
-  border: 1px solid var(--color-royalblue-100);
-  box-sizing: border-box;
-}
-.no-permission,
-.permission-container {
-  flex-direction: column;
-  gap: var(--gap-11xl);
-  color: var(--color-gray-100);
-}
 .no-permission {
   position: absolute;
   top: 0;
@@ -357,7 +275,9 @@
   border-radius: var(--br-9xs);
   background-color: var(--gray-gray-1);
   width: 100%;
+  display: flex;
   flex-direction: row;
+  align-items: flex-start;
   justify-content: center;
   padding: var(--padding-23xl-5) var(--padding-xl);
   box-sizing: border-box;
@@ -370,12 +290,8 @@
   font-family: var(--body-bold-small);
 }
 @media screen and (max-width: 450px) {
-  .div1,
-  .no-permission-to {
+  .div1 {
     font-size: var(--font-size-lgi);
-  }
-  .no-permission-to {
-    line-height: 23px;
   }
   .no-permission {
     gap: var(--gap-10xl);
